# qrna-folding

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
qrna_folding/: experiment.py  experiments.py  main.py  preprocessor.py  preprocessors.py  utils.py  visualisation.py
